<resources>
    <!-- Strings de la pantalla de login -->
    <string name="app_name">SmartSave</string>
    <string name="titulo_login">SmartSave</string>
    <string name="subtitulo_login">Tu app de finanzas mas segura</string>
    <string name="tituloCard">Iniciar Sesion</string>
    <string name="usuario">Usuario: </string>
    <string name="usuario_a">USUARIO</string>
    <string name="contraseña">Contraseña: </string>
    <string name="text_botom">Entrar</string>
    <string name="text_registro">Registrarse</string>
    <string name="contrase_a">CONTRASEÑA</string>

    <!-- Strings pantalla de Movimientos -->
    <string name="titulo_mov">MIS MOVIMIENTOS</string>
    <string name="total">0€ </string>
    <string name="tv1">Tu total disponible</string>
    <string name="anadir">+</string>
    <string name="movimiento">Movimiento</string>
    <string name="recientes_tv">RECIENTES</string>

    <!-- Strings fagment de inicio -->
    <string name="titulo_frag">Bienvenido</string>
    <string name="grafico_frag">Graficos</string>
    <string name="texto_ing_frag">Tu ingreso mensual fijo: </string>
    <string name="tot_ing_frag">Total ingresos: </string>
    <string name="toto_gas_frag">Total gastos: </string>
    <string name="objetivo_frag">Mi objetivo de ahorro</string>
    <string name="totales">0€</string>

    <!-- Strings fragment de configuracion -->
    <string name="idioma">Cambiar idioma</string>
    <string name="nombreapp">SS</string>
    <string name="usuario_tv">Tu usuario</string>
    <string name="general">GENERAL</string>
    <string name="usuario_email_com">usuario@email.com</string>
    <string name="soporte">SOPORTE</string>
    <string name="contacta_con_nosotros">Contacta con nosotros</string>
    <string name="te_respondemos_en_24_48_h">Te respondemos en 24–48 h</string>
    <string name="escribe_tu_mensaje_aqu">Escribe tu mensaje aquí...</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="cuenta">CUENTA</string>
    <string name="smartsave_version">SmartSave v1.0.0</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

    <!-- Insert Window String -->
    <string name="titulo">Editar movimiento</string>
    <string name="insert_ing">↑ Ingreso</string>
    <string name="insert_gas">↓ Gasto</string>
    <string name="importe_tv">Importe (€)</string>
    <string name="categoria">Categoría: </string>
    <string name="guardarBtn">Guardar</string>
    <string name="concepto">CONCEPTO</string>

    <!--Menu de edicion y eliminacion -->
    <string name="menu_edicion">Editar</string>
    <string name="menu_eliminar">Eliminar</string>

    <!-- Bottom Menu String -->
    <string name="home">Inicio</string>
    <string name="mov">Movimientos</string>
    <string name="config">Configuración</string>
    <string name="fijo">Fijo</string>

    <!-- Strings de categorías de movimiento -->
    <string name="factura">Facturas</string>
    <string name="hipoteca">Hipoteca</string>
    <string name="transporte">Transporte</string>
    <string name="alimentacion">Alimentacion</string>
    <string name="ocio">Ocio</string>
    <string name="otros">Otros</string>
    <string name="text_window_edit">Editar ingreso mensual</string>

    <string-array name="categorias">
        <item>@string/factura</item>
        <item>@string/hipoteca</item>
        <item>@string/ocio</item>
        <item>@string/alimentacion</item>
        <item>@string/transporte</item>
        <item>@string/otros</item>
    </string-array>
</resources>